Changed the job ids to UUIDs.
